pic added to nanoribbon square

--- a/Sk_nanoribbon_rashba.ipynb
+++ b/Sk_nanoribbon_rashba.ipynb
@@ -16,6 +16,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9dffa9f2",
+   "metadata": {},
+   "source": [
+    "\n",
+    "![nanoribbon fig](pic/sq-sk-nanoribbon.png)\n",
+    "\n",
+    "*Figure 1: This is the square skyrmion nanoribbon. The highlighted green box is the nanoribbon unit cell. The blue highlighting box is the normal skyrmion unitcell in a 2D periodic crystal.*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "72e59f28-548a-4ba6-90ae-51b521346ba8",
