--- a/Sk_nanoribbon_rashba.ipynb
+++ b/Sk_nanoribbon_rashba.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![nanoribbon fig](THE-in-SkX/pic/sq-sk-nanoribbon.png)\n",
+    "![nanoribbon fig](/pic/sq-sk-nanoribbon.png)\n",
     "\n",
     "*Figure 1: This is the square skyrmion nanoribbon. The highlighted green box is the nanoribbon unit cell. The blue highlighting box is the normal skyrmion unitcell in a 2D periodic crystal.*"
    ]
